# nexcore-proof-of-meaning

./: Cargo.toml  README.md
examples/: pom.rs
src/: chromatography.rs  distillation.rs  element.rs  grounding.rs  lib.rs  pipeline.rs  registry.rs  spectrum.rs  synonymy.rs  titration.rs
